--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -79,7 +79,7 @@ header{
         cursor: pointer;
         display: flex;
         align-items: flex-start;
-        justify-content: center;
+        justify-content: flex-start;
         .text{
             margin-left: 2rem;
             strong{
