--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -255,9 +255,11 @@
                 display: flex;
                 align-items: flex-start;
                 justify-content: space-between;
+                margin-bottom: 10rem;
                 .img{
                     width: 100%;
                     max-width: 50%;
+                    animation: floating infinite 4s;
                 }
                 .text{
                     width: 100%;
@@ -277,6 +279,7 @@
                         flex-direction: column;
                         justify-content: center;
                         width: 100%;
+                        box-shadow: -10px 10px 10px #333;
                         li{
                             width: 100%;
                             display: flex;
@@ -295,20 +298,31 @@
                             }
                         }
                     }
+                    p{
+                        margin-top: 2rem;
+                        text-align: justify;
+                        border-radius: 2rem;
+                        padding: 2rem;
+                        font-size: 1.8rem;
+                        background-color: #df9f20;
+                    }
                 }
             }
             .card-secondy{
                 display: flex;
-                flex-direction: row-reverse;
                 align-items: flex-start;
+                flex-direction: row-reverse;
                 justify-content: space-between;
+                margin-bottom: 10rem;
                 .img{
                     width: 100%;
                     max-width: 50%;
+                    animation: floating infinite 4s;
                 }
                 .text{
                     width: 100%;
                     max-width: 50%;
+                    margin-right: 1rem;
                     h3{
                         font-size: 6rem;
                         font-weight: 800;
@@ -316,11 +330,15 @@
                     }
                     ul{
                         margin-top: 4rem;
+                        background-color: rgba(223, 32, 48, 0.726);
+                        padding: 2rem;
+                        border-radius: 0.8rem;
                         display: flex;
                         align-items: flex-start;
                         flex-direction: column;
                         justify-content: center;
                         width: 100%;
+                        box-shadow: -10px 10px 10px #333;
                         li{
                             width: 100%;
                             display: flex;
@@ -339,8 +357,29 @@
                             }
                         }
                     }
+                    p{
+                        margin-top: 2rem;
+                        text-align: justify;
+                        border-radius: 2rem;
+                        padding: 2rem;
+                        font-size: 1.8rem;
+                        background-color: #df9f20;
+                    }
                 }
             }
         }
+    }
+}
+
+
+@keyframes floating{
+    0%{
+        transform: translateY(0);
+    }
+    66%{
+        transform: translateY(-15px);
+    }
+    100%{
+        transform: translateY(0);
     }
 }
